<resources>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="startimage">startImage</string>
    <string name="app_name" />
    <string name="planet_resistance">PLANET RESISTANCE</string>
    <string name="start">Start</string>
    <string name="quit">Quit</string>
    <string name="configimage">configImage</string>
    <string name="username">Username</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="shop">Shop</string>
    <string name="shopimage">shopImage</string>
    <string name="sniper">Sniper</string>
    <string name="assassin">Assassin</string>
    <string name="gravity">Gravity</string>
    <string name="x">X</string>
    <string name="towertext">towerText</string>
    <string name="damage">Damage</string>
    <string name="firing_rate">Firing Rate</string>
    <string name="range">Range</string>
    <string name="multiplicity">Multiplicity</string>
    <string name="poison_rate">Poison Rate</string>
    <string name="slow_rate">Slow Rate</string>
    <string name="price">Price</string>
    <string name="purchase">Purchase</string>
    <string name="gameoverimage">gameOverImage</string>
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="gamewonimage">gameWonImage</string>
    <string name="game_won">Game Won!</string>
</resources>