<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/towerInfoLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui_activity.TowerInfoActivity">

    <TextView
        android:id="@+id/towerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.6"
        android:textAllCaps="true"
        android:textColor="#F44336"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/damageText"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/damage"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/firingRateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/damage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/firingRate"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/firingRateText"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/firing_rate"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/rangeText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/firingRate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/range"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rangeText"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/range"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplicityText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/range"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplicity"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/multiplicityText"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/multiplicity"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/poisonRateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/multiplicity"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/poisonRate"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/poisonRateText"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/poison_rate"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/slowRateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/poisonRate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/slowRate"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/slowRateText"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/slow_rate"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/priceText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/slowRate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/price"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/purchaseButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:max="10"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/purchaseButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/purchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="sans-serif-medium"
        android:text="@string/purchase"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/xButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="sans-serif-medium"
        android:text="@string/x"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/damage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/towerText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/purchaseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>